[tool.poetry]
name = "borb-poster"
version = "0.1.0"
description = ""
authors = ["engeir <eirroleng@gmail.com>"]

[tool.poetry.scripts]
make-poster = "borb_poster.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
diagrams = "^0.21.1"
borb = {git = "https://github.com/engeir/borb.git", rev = "add-list-start-index"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
rich = "^12.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
